# does-the-judge-know

./: .gitignore  README.md  post.md  pyproject.toml
data/: PROVENANCE.txt
data/raw/: base_both_k8.jsonl  base_claude_both_k8.jsonl  base_nano_k8.jsonl  criteria_both_k8.jsonl  criteria_claude_both_k8.jsonl
data/tables/: all_metrics.json
figures/: fig1_bias_share_by_category.csv  fig2_overlap_by_category.csv
post/: post.md
results/: day1_auc.csv  day1_bias_share.csv  day1_overlap.csv  day1_summary.md  day3_robustness.csv  day3_summary.md  day3c_escalation.csv  day3d_escalation_family.csv  final_numbers.md  step0_inventory.csv  step0_summary.md
scripts/: fetch_data.sh
src/: __init__.py  data_loader.py  day1.py  day1_analysis_a.py  day1_analysis_b.py  day3_robustness.py  day3c_escalation.py  day3d_cross_family.py  export_figures.py  post_fig_family.py  post_fig_overlap.py  step0_audit.py  winners.py
tests/: test_data_loader.py  test_winners.py
