[project]
name = "does-the-judge-know"
version = "0.1.0"
description = "Can LLM-judge resample disagreement detect judge errors on RewardBench 2?"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "matplotlib>=3.9",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
